--- a/Assignments/CSCI 112 HW 1/MakeFile
+++ b/Assignments/CSCI 112 HW 1/MakeFile
@@ -1,33 +1,13 @@
-# compiler name
-CXX = g++
+CXX = clang++
+CXXFLAGS = -std=c++11
 
-# C++ compiler flags
-# -c : just do preprocess; compile and assemble into object files
-# -g : adds debugging information to the executable file
-# -Wall : turns on most, but not  all, compiler warnings
-# -std=c++17 : uses c++17 standard
-# put all the required flags separated by space
-CXXFLAGS = -c -g -Wall -std=c++17
+all: ElevatorSim
 
-# the build target executable file; .exe is not required
-PROGRAM = ElevatorSim.out
+ElevatorSim: Elevator.o
+    $(CXX) $(CXXFLAGS) -o ElevatorSim Elevator.o
 
-# list all .cpp files separated by space
-CPPFILES = ElevatorSim.cpp
+Elevator.o: Elevator.cpp Elevator.h
+    $(CXX) $(CXXFLAGS) -c Elevator.cpp
 
-# make all rule/default rule that'll be run when we run "make"
-# first compile each file to object file
-# then make a single binary program
-all:
-	$(CXX) $(CXXFLAGS) $(CPPFILES)
-	$(CXX) -o $(PROGRAM) *.o
-
-# make clean rule
-# delete object and binary files
 clean:
-	rm -f $(PROGRAM) *.o
-
-# FIXME
-# Add a rule to run the program
-run:
-	./$(PROGRAM)
+    rm -f *.o ElevatorSim
