--- a/Assignments/Assignment 2/Makefile
+++ b/Assignments/Assignment 2/Makefile
@@ -1,33 +1,14 @@
-# compiler name
-CXX = g++
+CXX = clang++
 
-# C++ compiler flags
-# -c : just do preprocess; compile and assemble into object files
-# -g : adds debugging information to the executable file
-# -Wall : turns on most, but not  all, compiler warnings
-# -std=c++17 : uses c++17 standard
-# put all the required flags separated by space
-CXXFLAGS = -c -g -Wall -std=c++17
+CXXFLAGS = -std=c++11
 
-# the build target executable file; .exe is not required
-PROGRAM = main.out
+all: Bank
 
-# list all .cpp files separated by space
-CPPFILES = main.cpp
+Bank: main.o
+	$(CXX) $(CXXFLAGS) -o Bank main.o
 
-# make all rule/default rule that'll be run when we run "make"
-# first compile each file to object file
-# then make a single binary program
-all:
-	$(CXX) $(CXXFLAGS) $(CPPFILES)
-	$(CXX) -o $(PROGRAM) *.o
+main.o: main.cpp
+	$(CXX) $(CXXFLAGS) -c main.cpp
 
-# make clean rule
-# delete object and binary files
 clean:
-	rm -f $(PROGRAM) *.o
-
-# FIXME
-# Add a rule to run the program
-run:
-	./$(PROGRAM)
+	rm -f *.o Bank
