--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,5 +71,5 @@
         "iterator": "cpp",
         "utility": "cpp"
     },
-    "C_Cpp.errorSquiggles": "enabled"
+    "C_Cpp.errorSquiggles": "disabled"
 }
